--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        #root{
+            height: 800px;
+            width: 500px;
+            background: #000;
+            margin: 0 auto;
+            position: relative;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
